# SexyJarvis

./: .env.sample  .gitignore  AGENTS.md  README.md  config.toml.sample  future_features.md  pyproject.toml
.cursor/rules/: token-savings.mdc
desktop/: integrations.js  main.js  package-lock.json  package.json  preload.js  test_desktop_e2e.mjs  themes.js
desktop/renderer/: app.js  cowork.js  index.html  multi-agent.js  quill-features.js  styles.css
desktop/renderer/modules/: agentPanel.js  palette.js  settings.js  workspaces.js
docs/: AGENTIC_IDE_ITERATIONS.md  feature-roadmap-plan.md
quill/: __init__.py  __main__.py  bash_jobs.py  caveman.py  cli.py  codegraph_tools.py  compact.py  config.py  cost.py  cursor_backend.py  cursor_patch.py  desktop_launcher.py  desktop_session.py  external_tools.py  extras.py  global_env.sample  hooks.py  ignore.py  init_cmd.py  integrations.py  llm.py  llm_router.py  local_llm.py  mcp_client.py  memory.py  mentions.py  personas.py  prompts.py  rtk.py  secrets.py  session.py  telemetry.py  tool_types.py  tools.py  ui.py  watcher.py
quill/voice/: __init__.py  capture.py  ptt.py  settings.py  stt.py  styles.py  tts.py
scripts/: build_binary.py  fix_quill_casing.py  install_quill.py  pyinstaller_entry.py  verify_all.py
sexyjarvis/: agent.py  cli.py  config.py  cursor_backend.py  cursor_patch.py  prompts.py  tools.py  ui.py
sexyjarvis/voice/: __init__.py  settings.py
