[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quill"
version = "0.2.0"
description = "Quill — IDE-style AI coding agent with multi-workspace terminal integration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quill" }]
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
quill = "quill.cli:main"

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "keyboard>=0.13.5",
    "SpeechRecognition>=3.10.0",
]
cursor = ["cursor-sdk>=0.1.7"]
build = ["shiv>=1.0.0", "pyinstaller>=6.0"]
input = ["prompt_toolkit>=3.0.0"]
desktop = ["pywebview>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quill*"]
